fixed sponsor class issue; slightly adjusted spacing of sponsors om tablet+;

--- a/_sass/sass/components/sponsors.sass
+++ b/_sass/sass/components/sponsors.sass
@@ -18,7 +18,7 @@
 
     +tablet
       max-width: 230px
-      margin: 0 0 60px
+      margin: 0 0 45px
 
   &__link
     display: inline-block
